fit_predictor/tsp_gls/evaluates/total/coevolve/test1/popsize10_gen10_diff10/run2/2025-01-02_11-08-46/problem_iter4_response8.txt_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main_1/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "E:\Projects\CO\reevo-main_1\problems\tsp_gls\gpt.py", line 18
    combined Measure = centrality / degrees
             ^^^^^^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main_1/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "E:\Projects\CO\reevo-main_1\problems\tsp_gls\gpt.py", line 18
    combined Measure = centrality / degrees
             ^^^^^^^
SyntaxError: invalid syntax
